--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-basic-auth": "^1.2.1",
     "http-server": "^14.1.1",
     "ip": "^1.1.8",
     "serve-index": "^1.9.1"
